--- a/Pyschic-Game.html
+++ b/Pyschic-Game.html
@@ -8,39 +8,50 @@
 
 <body>
 
-    <h1>The Pyschic Game</h1>
+  <h1>The Pyschic Game</h1>
 
-    <p>Guess what letter I'm thinking of</p>
+  <p>Guess what letter I'm thinking of</p>
 
-  <div id="game"></div>   
+  <div id="game"></div>
 
   <script type="text/javascript">
-  
+
     var wins = 0;
     var losses = 0;
-    var guessesLeft = 10;
-    var computerGuess = Math.floor(Math.random() * 25) + 10;
+    var guessesLeft = 9;
+    var x = Math.floor(Math.random() * 25) + 10;
+    var computerGuess = x.toString(36);
     var lettersGuessed = "";
 
     // This function is run whenever the user presses a key.
-    document.onkeyup = function(event) {
+    document.onkeyup = function (event) {
 
       // Determines which key was pressed.
       var userGuess = event.key;
 
-      // This logic determines the outcome of the game (win/loss/tie), and increments the appropriate number
-  
+      if(guessesLeft = 9) {
+        lettersGuessed = userGuess;
+      } else {
+          lettersGuessed = lettersGuessed + ", " + userGuess;
+        };
 
-        // Creating a variable to hold our new HTML. Our HTML now keeps track of the user and computer guesses, and wins/losses/ties.
-        var html =
-           "<p>Computer guess: " + computerGuess + "</p>" +
-          "<p>Wins: " + wins + "</p>" +
-          "<p>Losses: " + losses + "</p>";
-          "<p>Guesses Left: " + guessesLeft + "</p>"
-        // Set the inner HTML contents of the #game div to our html string
-        document.querySelector("#game").innerHTML = html;
+      if(userGuess === computerGuess) {
+        wins++;
+      } else {
+        guessesLeft--;
       };
-    
+
+      // Creating a variable to hold our new HTML. Our HTML now keeps track of the user and computer guesses, and wins/losses/ties.
+      var html =
+        "<p>Computer guess: " + computerGuess + "</p>" +
+        "<p>Wins: " + wins + "</p>" +
+        "<p>Losses: " + losses + "</p>" +
+        "<p>Guesses Left: " + guessesLeft + "</p>" +
+        "<p>Letters Guessed: " + lettersGuessed + "</p>";
+      // Set the inner HTML contents of the #game div to our html string
+      document.querySelector("#game").innerHTML = html;
+    };
+
   </script>
 
 </body>
