--- a/Pyschic-Game.html
+++ b/Pyschic-Game.html
@@ -12,38 +12,47 @@
 
   <p>Guess what letter I'm thinking of</p>
 
-  <div id="game"></div>
+  <div id="game">
+    <p>Wins: 0</p>
+    <p>Losses: 0</p>
+    <p>Guesses Left: 9</p>
+    <p>Letters Guessed:</p>
+  </div>
 
   <script type="text/javascript">
 
     var wins = 0;
     var losses = 0;
-    var guessesLeft = 9;
+    var guessesLeft = 10;
     var x = Math.floor(Math.random() * 25) + 10;
     var computerGuess = x.toString(36);
     var lettersGuessed = "";
 
-    // This function is run whenever the user presses a key.
     document.onkeyup = function (event) {
 
-      // Determines which key was pressed.
       var userGuess = event.key;
 
-      if(guessesLeft = 9) {
+      if (guessesLeft === 10) {
         lettersGuessed = userGuess;
       } else {
-          lettersGuessed = lettersGuessed + ", " + userGuess;
-        };
+        lettersGuessed = lettersGuessed + ", " + userGuess;
+      };
 
-      if(userGuess === computerGuess) {
+      if (userGuess === computerGuess) {
         wins++;
       } else {
         guessesLeft--;
+        if (guessesLeft === 0) {
+          losses++;
+          guessesLeft = 10;
+          var x = Math.floor(Math.random() * 25) + 10;
+          var computerGuess = x.toString(36);
+          lettersGuessed = "";
+          alert("You're done");
+        }
       };
 
-      // Creating a variable to hold our new HTML. Our HTML now keeps track of the user and computer guesses, and wins/losses/ties.
       var html =
-        "<p>Computer guess: " + computerGuess + "</p>" +
         "<p>Wins: " + wins + "</p>" +
         "<p>Losses: " + losses + "</p>" +
         "<p>Guesses Left: " + guessesLeft + "</p>" +
